[package]
name = "rustic-tweets"
version = "0.1.0"
authors = ["Spenser Reinhardt <>"]

[dependencies]
twitter-api = "0.0.8"
rustc-serialize = "*"
oauth-client = "*"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled

